# greencompute-audit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
audit/: __init__.py  __main__.py  chain.py  diff.py  fetch.py  main.py  replay.py  verify.py  watch.py  weights.py
