[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greencompute-audit"
version = "0.1.0"
description = "Independent auditor for the Green Compute Bittensor subnet (netuid 110 mainnet / 16 testnet)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "substrate-interface>=1.7",
    "pydantic>=2.7",
    "click>=8.1",
]

[project.scripts]
greencompute-audit = "audit.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["audit*"]
